<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio_pipeline</name>
  <version>1.0.0</version>
  <description>
    DP7 Autonomous Navigator — Visual Inertial Odometry pipeline for
    GPS-denied tunnel environments.  Stack: OpenVINS MSCKF → Fourier
    VIO → RatSLAM → Tunnel Constraints → PID Autopilot.
  </description>

  <maintainer email="student@example.com">DP7 Team</maintainer>
  <license>MIT</license>

  <!-- ── Build tool ────────────────────────────────────── -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ── ROS 2 execution dependencies ─────────────────── -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- ── Launch system ─────────────────────────────────── -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ── Python scientific stack (install via pip) ─────── -->
  <!-- Run: pip install numpy scipy opencv-python-headless -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- ── Test dependencies ─────────────────────────────── -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
